# ducker

./: .gitignore  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  README.md  index.md  install.sh  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  docs.yml  release-plz.yml  test.yml
.vitepress/: config.mts
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.css  index.js
docs/docs/: 010-installation.md  020-using-ducker.md  030-configuration.md
src/: app.rs  autocomplete.rs  component.rs  config.rs  context.rs  help.rs  lib.rs  main.rs  page.rs  sorting.rs  state.rs  terminal.rs  tracing.rs  util.rs
src/callbacks/: delete_all_containers.rs  delete_container.rs  delete_image.rs  delete_network.rs  delete_volume.rs  empty_callable.rs  mod.rs  prune_networks.rs
src/components/: alert_modal.rs  body.rs  boolean_modal.rs  command_input.rs  confirmation_modal.rs  containers.rs  footer.rs  header.rs  help.rs  input_field.rs  mod.rs  modal.rs  resize_notice.rs  table_filter.rs  text_input_wrapper.rs  version.rs
src/docker/: container.rs  container_summary.rs  container_verbose.rs  image.rs  logs.rs  mod.rs  network.rs  traits.rs  util.rs  volume.rs
src/events/: event_loop.rs  key.rs  message.rs  mod.rs  transition.rs
src/pages/: attach.rs  containers.rs  context.rs  describe.rs  describe_container.rs  help.rs  images.rs  logs.rs  mod.rs  networks.rs  volume.rs  volumes.rs
src/traits/: callback.rs  component.rs  mod.rs  page.rs
src/ui/: app.rs  mod.rs  page_manager.rs  utils.rs
src/widgets/: mod.rs  modal.rs  text_input.rs
~/.config/ducker/: config.yaml
