[package]
name = "ducker"
description = "A slightly quackers Docker TUI based on k9s 🦆"
authors = ["Robert Soane"]
version = "0.5.4"
homepage = "https://ducker.soane.io"
repository = "https://github.com/robertpsoane/ducker"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["docker", "developer-tools", "ratatui", "terminal"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src", "LICENSE.txt", "CHANGELOG.md", "README.md"]
rust-version = "1.82.0"

[dependencies]
serde_json = "1.0.145"
ansi-to-tui = "7.0.0"
async-trait = "0.1.89"
bollard = { version = "0.19.4", features = ["ssl"] }
byte-unit = { version = "5.2.0", features = ["byte"] }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.20"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = [
    "serde",
    "unstable-rendered-line-info",
] }
ratatui-macros = "0.6.0"
serde = "1.0.228"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tui-big-text = "0.7.1"
ureq = { version = "3.1.4", features = ["json"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[badges]
maintenance = { status = "actively-developed" }
