[package]
authors = ["Robert Soane"]
categories = ["command-line-utilities", "development-tools"]
description = "A slightly quackers Docker TUI based on k9s 🦆"
edition = "2024"
homepage = "https://ducker.soane.io"
include = ["/src", "LICENSE.txt", "CHANGELOG.md", "README.md"]
keywords = ["docker", "developer-tools", "ratatui", "terminal"]
license-file = "LICENSE.txt"
name = "ducker"
readme = "README.md"
repository = "https://github.com/robertpsoane/ducker"
rust-version = "1.88"
version = "0.5.6"

[dependencies]
ansi-to-tui = "7.0.0"
async-trait = "0.1.89"
bollard = { version = "0.19.4", features = ["ssl"] }
byte-unit = { version = "5.2.0", features = ["byte"] }
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.20"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = [
  "serde",
  "unstable-rendered-line-info",
] }
ratatui-macros = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.148"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-big-text = "0.7.1"
ureq = { version = "3.1.4", features = ["json"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[badges]
maintenance = { status = "actively-developed" }
